corrected minor alignment issue with sort button

--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -253,7 +253,7 @@ justify-content: flex-end;
 .sort{
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-  margin-right:.5rem;
+  margin-right:1vw;
 }
 
 .list-container-div{
